--- a/start_menu.kv
+++ b/start_menu.kv
@@ -12,16 +12,19 @@ ScreenManagement:
 	name: "main"
 	
 	FloatLayout:
+
         AsyncImage:
             source: 'assets/background/meadow.png'
-            pos_hint: {"top": 1.2}
+            pos_hint: {"y": 0.1}
 
         AsyncImage:
         	source: 'assets/platform/platform1.png'
         	pos_hint: {"top": 0.6}
+        	
 		AsyncImage:
 			source: "assets/start_menu/RunningManLogo.png"
-			pos_hint: {"top": 1.1}
+			pos_hint: {"top": 1.05, "right": 0.86}
+			size_hint: 0.7, 0.7
 	
 	BoxLayout:
 		orientation: "horizontal"
@@ -31,32 +34,32 @@ ScreenManagement:
 		Button:
 			color: 0,200,237,1
 			text: "Settings"
-			font_size: 30
+			font_size: 25
 			font_name: "Amatic-Bold"
 			size_hint: 0.1, 0.1
 			on_release: app.root.current = "settings"
 			pos_hint: {"top": 0.45}
-			background_color: 255,255,255,0.5
+			background_color: 255,255,255,0.3
 			
 		Button:
 			text: "Play"
-			font_size: 40
+			font_size: 35
 			font_name: "Amatic-Bold"
 			color: 0,200,237,1
 			size_hint: 0.1, 0.1
 			on_release: app.root.current = "game"
 			pos_hint: {"top": 0.55}
-			background_color: 255,255,255,0.5
+			background_color: 255,255,255,0.3
 			
 		Button:
 			color: 0,200,237,1
 			text: "Credits"
-			font_size: 30
+			font_size: 25
 			font_name: "Amatic-Bold"
 			size_hint: 0.1, 0.1
 			on_release: app.root.current = "settings"
 			pos_hint: {"top": 0.45}
-			background_color: 255,255,255,0.5
+			background_color: 255,255,255,0.3
 		
 <SettingsScreen>:
 	name: "settings"
