--- a/main.kv
+++ b/main.kv
@@ -34,7 +34,7 @@ ScreenManagement:
 			color: 0,200,237,1
 			text: "Settings"
 			font_size: 25
-			font_name: "Amatic-Bold"
+			font_name: "assets/fonts/Amatic-Bold.ttf"
 			size_hint: 0.1, 0.1
 			on_release:	app.root.current = "settings"
 			pos_hint: {"top": 0.45}
@@ -43,7 +43,7 @@ ScreenManagement:
 		Button:
 			text: "Play"
 			font_size: 35
-			font_name: "Amatic-Bold"
+			font_name: "assets/fonts/Amatic-Bold.ttf"
 			color: 0,200,237,1
 			size_hint: 0.1, 0.1
 			on_release: app.root.current = "game"
@@ -54,7 +54,7 @@ ScreenManagement:
 			color: 0,200,237,1
 			text: "Credits"
 			font_size: 25
-			font_name: "Amatic-Bold"
+			font_name: "assets/fonts/Amatic-Bold.ttf"
 			size_hint: 0.1, 0.1
 			on_release: app.root.current = "settings"
 			pos_hint: {"top": 0.45}
