--- a/main.kv
+++ b/main.kv
@@ -68,7 +68,7 @@ ScreenManagement:
 			color: 0,200,237,1
 			text: "Back"
 			font_size: 30
-			font_name: "Amatic-Bold"
+			font_name: "assets/fonts/Amatic-Bold.ttf"
 			size_hint: 0.1, 0.1
 			on_release: app.root.current = "main"
 			pos_hint: {"right": 1, "top": 1} 
