Multiple changes to main.py and main.kv
- Fixed settings page
- Added button to toggle music and sound fx
- Credits
- Minor fixes

--- a/main.kv
+++ b/main.kv
@@ -33,13 +33,13 @@ ScreenManagement:
 		
 		Button:
 			color: 0,200,237,1
-			text: "Settings"
+			text: ""
 			font_size: 25
 			font_name: "assets/fonts/Amatic-Bold.ttf"
 			size_hint: 0.1, 0.1
 			on_release:	app.root.current = "settings"
 			pos_hint: {"top": 0.45}
-			background_color: 255,255,255,0.3
+			background_color: 255,255,255,0
 			
 		Button:
 			text: "Play"
@@ -53,13 +53,13 @@ ScreenManagement:
 			
 		Button:
 			color: 0,200,237,1
-			text: "Credits"
+			text: ""
 			font_size: 25
 			font_name: "assets/fonts/Amatic-Bold.ttf"
 			size_hint: 0.1, 0.1
-			on_release: app.root.current = "settings"
+			on_release: app.root.current = "credits"
 			pos_hint: {"top": 0.45}
-			background_color: 255,255,255,0.3
+			background_color: 255,255,255,0
 		
 <SettingsScreen>:
 	name: "settings"
@@ -77,22 +77,49 @@ ScreenManagement:
 			
 	BoxLayout:
 		orientation: "vertical"
-		padding: 20
-		spacing: 50
-		
+		padding: 30
+		spacing: 12
+	
 		Button:
 			text: root.music_on_off
-			font_size: 35
+			font_size: 30
 			font_name: "assets/fonts/Amatic-Bold.ttf"
 			color: 0,200,237,1
-			size_hint: 0.1, 0.1
-			on_press: root.music_toggle()
-			pos_hint: {"top": 0.55}
+			size_hint: 1,1
+			on_release: root.toggle_music()
+			pos_hint: {"top": 0.5}
+			background_color: 255,255,255,0.3
+			
+		Button:
+			text: root.soundfx_on_off
+			font_size: 30
+			font_name: "assets/fonts/Amatic-Bold.ttf"
+			color: 0,200,237,1
+			size_hint: 1,1
+			on_release: root.toggle_soundfx()
+			pos_hint: {"bottom": 0.5}
 			background_color: 255,255,255,0.3
 
 			
 <CreditsScreen>:
 	name: "credits"
+	
+	FloatLayout:
+	
+		Button:
+			color: 0,200,237,1
+			text: "Back"
+			font_size: 30
+			font_name: "assets/fonts/Amatic-Bold.ttf"
+			size_hint: 0.1, 0.1
+			on_release: app.root.current = "start"
+			pos_hint: {"right": 1, "top": 1} 
+	
+	Label:
+		text: 'Credits\n\nDeveloped by:\nChanun Sumphanphaisal\nElton Xue\nRichmond Rimando\n\nCITRUS HACK 2016'
+		font_size: 22
+		color: 0,200,237,1
+		font_name: "assets/fonts/Amatic-Bold.ttf"
 		
 <GameScreen>:
 	name: "game"
