--- a/main.kv
+++ b/main.kv
@@ -9,7 +9,8 @@ ScreenManagement:
 	GameScreen:
 	
 <StartScreen>:
-	id: start_screen
+	name: "start"
+	
 	FloatLayout:
 
         AsyncImage:
@@ -70,10 +71,9 @@ ScreenManagement:
 			font_size: 30
 			font_name: "assets/fonts/Amatic-Bold.ttf"
 			size_hint: 0.1, 0.1
-			on_release: app.root.current = "main"
+			on_release: app.root.current = "start"
 			pos_hint: {"right": 1, "top": 1} 
 			
-<<<<<<< HEAD
 	BoxLayout:
 		orientation: "vertical"
 		padding: 30
@@ -99,14 +99,10 @@ ScreenManagement:
 			pos_hint: {"bottom": 0.5}
 			background_color: 255,255,255,0.3
 
-			
-=======
->>>>>>> origin/master
 <CreditsScreen>:
 	name: "credits"
 	
-	FloatLayout:
-	
+	FloatLayout:	
 		Button:
 			color: 0,200,237,1
 			text: "Back"
